--- a/FiMa/CreateAccountTwo.xaml
+++ b/FiMa/CreateAccountTwo.xaml
@@ -80,13 +80,13 @@
             <HorizontalStackLayout>
                 <StackLayout WidthRequest="150">
                     <Label Text="Renda Mensal" HeightRequest="30"/>
-                    <Entry Placeholder="R$ 0.000,00" Keyboard="Numeric" x:Name="EtRenda" Text="0"/>
+                    <Entry Placeholder="R$ 0.000,00" Keyboard="Numeric" x:Name="EtRenda" Text="0" TextChanged="EtRenda_TextChanged"/>
 
                 </StackLayout>
                 <Label Text=" " WidthRequest="30"/>
                 <StackLayout WidthRequest="150">
                     <Label Text="Despesas Fixas" HeightRequest="30"/>
-                    <Entry Placeholder="R$ 0.000,00" Keyboard="Numeric" x:Name="EtDespesa" Text="0"/>
+                    <Entry Placeholder="R$ 0.000,00" Keyboard="Numeric" x:Name="EtDespesa" Text="0" TextChanged="EtDespesa_TextChanged"/>
 
                 </StackLayout>
             </HorizontalStackLayout>
